change ineligable for referral promo text

--- a/app/views/publishers/_promo_panel.html.slim
+++ b/app/views/publishers/_promo_panel.html.slim
@@ -12,7 +12,7 @@
         - elsif !@publisher.valid_promo_country?
           .promo-panel-item-alert
             #promo-panel-alert
-              = t('promo.dashboard.restricted_country')
+              = t('promo.dashboard.signups_disabled')
         - else
           .promo-panel-item-alert
             #promo-panel-alert
