--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -135,4 +135,4 @@ noscript
     })();
 
 script id="instant-donation-modal" type="text/html"
-  = render "instant_donation_modal", wallet: @wallet, uphold_connection: @publisher.uphold_connection
+  = render "instant_donation_modal", uphold_connection: @publisher.uphold_connection
