--- a/app/views/admin/publishers/show.html.slim
+++ b/app/views/admin/publishers/show.html.slim
@@ -11,84 +11,8 @@ hr
   #publisher-section.shadow-sm
     = render partial: 'admin/shared/publisher_header', locals: { navigation_view: @navigation_view }
     .border-top
-
-    .p-4.split-row-container.bg-white
-      .split-row
-        h5= "Overview"
-        .db-info-row
-          .db-field = "ID:"
-          .db-value = @publisher.id
-        - if @publisher.email.present?
-          .db-info-row
-            .db-field = "Email:"
-            .db-value = @publisher.email
-        - else
-          .db-info-row
-            .db-field = "Pending email:"
-            .db-value = @publisher.pending_email
-        .db-info-row
-          .db-field = "Role:"
-          .db-value = @publisher.role
-        .db-info-row
-          .db-field = "Created:"
-          .db-row = @publisher.created_at.strftime('%B %d, %Y')
-        .db-info-row
-          .db-field = "Overall BAT balance:"
-          .db-value = "#{publisher_overall_bat_balance(@publisher)}"
-        - if @publisher.selected_wallet_provider&.default_currency.present?
-          .db-info-row
-            .db-field = "Overall #{@publisher.selected_wallet_provider&.default_currency} balance:"
-            .db-value = "#{publisher_converted_overall_balance(@publisher)}"
-        - if @publisher.created_by.present?
-          .db-info-row
-            .db-field = "Created by:"
-            .db-value = link_to @publisher.created_by, admin_publisher_path(@publisher.created_by)
-        - ActiveRecord::Base.connected_to(role: :reading)
-          - if @publisher.promo_enabled_2018q1
-            .db-info-row
-              .db-field = "Referral downloads:"
-              .db-value = publisher_referral_totals(@publisher)[PromoRegistration::RETRIEVALS]
-            .db-info-row
-              .db-field = "Referral installs:"
-              .db-value = publisher_referral_totals(@publisher)[PromoRegistration::FIRST_RUNS]
-            .db-info-row
-              .db-field = "Referral confirmations:"
-              .db-value = publisher_referral_totals(@publisher)[PromoRegistration::FINALIZED]
-            .db-info-row
-              .db-field
-                = "Referral owner status"
-                span data-tooltip="If the user is 'no-ugp' this means their promos will 404"
-                  = fa_icon 'question-circle', class: 'mx-1'
-                = ": "
-
-              .db-value= @referral_owner_status
-
-      #statement-section.split-row
-        .payout-report-status-section
-          - if @potential_referral_payment.present?
-            h5= payout_report_status_header('owner')
-            .db-info-row
-              .db-field = "Uphold status"
-              .db-value = @potential_referral_payment.uphold_status || 'unavailable'
-            - if @potential_referral_payment.reauthorization_needed
-              .db-info-row
-                .db-field = "Reauthorization status"
-                .db-value = @potential_referral_payment.reauthorization_needed
-            .db-info-row
-              .db-field = "Uphold membership status"
-              .db-value = @potential_referral_payment.uphold_member
-            - if @potential_referral_payment.suspended
-              .db-info-row
-                .db-field = "Suspension status"
-                .db-value = @potential_referral_payment.suspended
-            - if @potential_referral_payment.address.blank?
-              .db-info-row
-                .db-field = "Wallet address"
-                .db-value = "Missing"
-            .db-info-row
-              .db-field = "Approx. amount"
-              .db-value = "#{@potential_referral_payment.amount.to_d * 1/1E18} BAT"
-
+    = render_async admin_publisher_wallet_info_path(@publisher.id), container_class: 'p-4 split-row-container bg-white' do
+      .spinner-border.center.text-primary role="status"
 
   - if @payout_report.present?
     .c-4.shadow-sm.bg-white.rounded.p-3.my-4
