Limit number of channels rendered per page down to 20. This isn't the most elegant solution, as it causes a full page reload when going from page to page, but the current impression is that the vast majority of users have less than 20 channels.
Loading the channels could also be improved by figuring out a way
to join the data across multiple tables, but I have not figured out
how to get this to work with partials.

--- a/app/views/admin/publishers/show.html.slim
+++ b/app/views/admin/publishers/show.html.slim
@@ -33,10 +33,9 @@ hr
   .c-4.shadow-sm.bg-white.rounded.p-3.my-4
     h3.text-dark Channels
     #channels-section
-      - @publisher.channels.each do |channel|
+      - @channels.each do |channel|
         = render partial: 'channel', locals: { channel: channel }
-        - unless channel == @publisher.channels.last
-          hr
+      = will_paginate @channels
 
   .c-4.shadow-sm.bg-white.rounded.p-3.my-4
     .accordion
