Get rid of payout_report_generating in favor of payout_in_progress
Closes https://github.com/brave-intl/publishers/issues/2950

--- a/app/views/publishers/_payout_status.html.slim
+++ b/app/views/publishers/_payout_status.html.slim
@@ -1,7 +1,7 @@
 .dashboard-panel--wrapper
   - payout_warning = payout_warning(payout_report, publisher)
   .dashboard-panel--header= t('.heading')
-  - if Rails.cache.fetch("payout_report_generating")
+  - if Rails.cache.fetch(SetPayoutInProgressJob::PAYOUT_IN_PROGRESS)
     .alert.alert-info
       .font-weight-bold=t('.information.generating')
   - else
