Fix links for admin publisher notes
Closes https://github.com/brave-intl/publishers/issues/2960

--- a/app/views/admin/publishers/_note.html.slim
+++ b/app/views/admin/publishers/_note.html.slim
@@ -35,7 +35,7 @@
 
       / Actual content of the note
       div id="content_#{note.id}" class="#{condense ? "" : "my-3" }"
-        = simple_format(set_mentions(note.note), sanitize: true)
+        = simple_format(set_mentions(note.note&.gsub(URI.regexp, '<a href="\0">\0</a>')&.html_safe), sanitize: true)
 
       .links
         / Reply button
