Add support for admins adding and removing whitelists
* Add publisher_whitelist_updates table

* Add PublisherWhitelistUpdates model, controller

* Expose UI to enable admins to use API

* Add test for PublisherWhitelistUpdatesController

--- a/app/views/admin/publishers/_wallet_info.html.slim
+++ b/app/views/admin/publishers/_wallet_info.html.slim
@@ -15,6 +15,9 @@
     .db-field = "Role:"
     .db-value = @publisher.role
   .db-info-row
+    .db-field = "Whitelisted:"
+    .db-value = @publisher.last_whitelist_update.present? && @publisher.last_whitelist_update&.enabled
+  .db-info-row
     .db-field = "Created:"
     .db-row = @publisher.created_at.strftime('%B %d, %Y')
   .db-info-row
