--- a/app/views/admin/publishers/_wallet_info.html.slim
+++ b/app/views/admin/publishers/_wallet_info.html.slim
@@ -23,7 +23,8 @@
   .db-info-row
     .db-field = "Overall BAT balance:"
     .db-value = "#{publisher_overall_bat_balance(@publisher)}"
-  - if @publisher.selected_wallet_provider&.default_currency.present?
+  - default_currency = @publisher.selected_wallet_provider&.default_currency
+  - if @publisher.selected_wallet_provider&.default_currency.present? && default_currency != 'BAT'
     .db-info-row
       .db-field = "Overall #{@publisher.selected_wallet_provider&.default_currency} balance:"
       .db-value = "#{publisher_converted_overall_balance(@publisher)}"
