--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -21,20 +21,21 @@ noscript
 = javascript_pack_tag "WelcomeModal"
 
 .dashboard
-  #uphold_status
-    .row
-      .col.mb-4.payouts class="#{@publisher.no_grants? ? 'col-md-7' : '' }"
-        = render_async home_balances_publishers_path, container_class: 'balance-panel align-items-center' do
-          .spinner-border.center.text-primary role="status"
-      .col-md.mb-4
-        .dashboard-panel--wrapper
-          .dashboard-panel--header#publishers_statements
-            = t ".statements.heading"
-          .dashboard-panel--content
-            .statements-available
-              = link_to(t(".statements.view_statements"), statements_path)
-            .statements-unavailable
-              = t ".statements.unavailable"
+    #uphold_status
+      .row
+        .col.mb-4.payouts class="#{@publisher.no_grants? ? 'col-md-7' : '' }"
+          = render_async home_balances_publishers_path, container_class: 'balance-panel align-items-center' do
+            .spinner-border.center.text-primary role="status"
+        - if !@publisher.paypal_locale?(params[:locale])
+          .col-md.mb-4
+            .dashboard-panel--wrapper
+              .dashboard-panel--header#publishers_statements
+                = t ".statements.heading"
+              .dashboard-panel--content
+                .statements-available
+                  = link_to(t(".statements.view_statements"), statements_path)
+                .statements-unavailable
+                  = t ".statements.unavailable"
 
     - if @payout_report.present?
       .row
@@ -44,8 +45,10 @@ noscript
       .col-md.mb-4
         - if !(@publisher.excluded_from_payout? || @publisher.paypal_locale?(params[:locale]) || @publisher.uphold_connection&.japanese_account? || @publisher.wire_only?)
           = render partial: 'wallet_services'
-        - elsif @publisher.paypal_locale?(params[:locale]) && !@publisher.wire_only?
+        - elsif @publisher.paypal_locale?(params[:locale]) && !@publisher.wire_only? && !@publisher.bitflyer_enabled?
           = render partial: "paypal_connection_panel"
+        - elsif @publisher.paypal_locale?(params[:locale]) && !@publisher.wire_only? && @publisher.bitflyer_enabled?
+          = render partial: "wallet_services"
 
       - if promo_running?
           = render partial: 'promo_panel'
