--- a/app/views/admin/publishers/_wallet_info.html.slim
+++ b/app/views/admin/publishers/_wallet_info.html.slim
@@ -33,7 +33,7 @@
       .db-field = "Created by:"
       .db-value = link_to @publisher.created_by, admin_publisher_path(@publisher.created_by)
   - ActiveRecord::Base.connected_to(role: :reading)
-    - if @publisher.promo_enabled_2018q1
+    - if @publisher.may_create_referrals?
       .db-info-row
         .db-field = "Referral downloads:"
         .db-value = publisher_referral_totals(@publisher)[PromoRegistration::RETRIEVALS]
@@ -77,4 +77,3 @@
       .db-info-row
         .db-field = "Approx. amount"
         .db-value = "#{@potential_referral_payment.amount.to_d * 1/1E18} BAT"
-
