Allows selective showing of payouts in progress
Closes https://github.com/brave-intl/publishers/issues/3180

--- a/app/assets/stylesheets/admin/style.scss
+++ b/app/assets/stylesheets/admin/style.scss
@@ -494,6 +494,9 @@ a.logo span {
   top: 22px;
 }
 
+.progress-checkbox {
+  margin-right: 5px;
+}
 
 .checkbox_1 > input:active {
   border: 2px solid #7e47a8;
