--- a/app/views/publishers/_payout_status.html.slim
+++ b/app/views/publishers/_payout_status.html.slim
@@ -1,7 +1,7 @@
 .dashboard-panel--wrapper
   - payout_warning = payout_warning(payout_report, publisher)
   .dashboard-panel--header= t('.heading')
-  - if Rails.cache.fetch(SetPayoutInProgressJob::PAYOUTS_IN_PROGRESS)&.include?(publisher.selected_wallet_provider&.class&.name)
+  - if Rails.cache.fetch(SetPayoutsInProgressJob::PAYOUTS_IN_PROGRESS)&.include?(publisher.selected_wallet_provider&.class&.name)
     .alert.alert-info
       .font-weight-bold=t('.information.generating')
   - else
