Fix empty cache scenario

--- a/app/views/admin/payout_reports/index.html.slim
+++ b/app/views/admin/payout_reports/index.html.slim
@@ -68,8 +68,9 @@ br
 
 h4 Change Payout Progress
 = form_for(:payout_in_progress, { method: :put, url: payouts_in_progress_admin_payout_reports_path}) do |f|
+  - payouts_in_progress = Rails.cache.fetch(SetPayoutsInProgressJob::PAYOUTS_IN_PROGRESS) || {}
   - SetPayoutsInProgressJob::CONNECTIONS.each do |connection_name|
-    = f.check_box(connection_name, checked: Rails.cache.fetch(SetPayoutsInProgressJob::PAYOUTS_IN_PROGRESS)[connection_name].present?, class: "progress-checkbox")
+    = f.check_box(connection_name, checked: payouts_in_progress[connection_name].present?, class: "progress-checkbox")
     = f.label connection_name
     br
   = f.submit("Submit", class: "btn btn-primary")
