--- a/app/views/publishers/_payout_status.html.slim
+++ b/app/views/publishers/_payout_status.html.slim
@@ -1,7 +1,7 @@
 .dashboard-panel--wrapper
   - payout_warning = payout_warning(payout_report, publisher)
   .dashboard-panel--header= t('.heading')
-  - if Rails.cache.fetch(SetPayoutInProgressJob::PAYOUT_IN_PROGRESS)
+  - if payout_in_progress?(publisher)
     .alert.alert-info
       .font-weight-bold=t('.information.generating')
   - else
