--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -26,7 +26,7 @@ noscript
         .col.mb-4.payouts class="#{@publisher.no_grants? ? 'col-md-7' : '' }"
           = render_async home_balances_publishers_path, container_class: 'balance-panel align-items-center' do
             .spinner-border.center.text-primary role="status"
-        - if !@publisher.paypal_locale?(params[:locale])
+        - if !@publisher.bitflyer_locale?(params[:locale])
           .col-md.mb-4
             .dashboard-panel--wrapper
               .dashboard-panel--header#publishers_statements
@@ -43,12 +43,8 @@ noscript
          = render partial: 'payout_status', locals: { payout_report: @payout_report, publisher: @publisher }
     .row
       .col-md.mb-4
-        - if !(@publisher.excluded_from_payout? || @publisher.paypal_locale?(params[:locale]) || @publisher.uphold_connection&.japanese_account? || @publisher.wire_only?)
+        - if !(@publisher.excluded_from_payout? || @publisher.wire_only?)
           = render partial: 'wallet_services'
-        - elsif @publisher.paypal_locale?(params[:locale]) && !@publisher.wire_only? && !@publisher.bitflyer_enabled?
-          = render partial: "paypal_connection_panel"
-        - elsif @publisher.paypal_locale?(params[:locale]) && !@publisher.wire_only? && @publisher.bitflyer_enabled?
-          = render partial: "wallet_services"
 
       - if promo_running?
           = render partial: 'promo_panel'
