--- a/app/views/publishers/_home_balances.html.slim
+++ b/app/views/publishers/_home_balances.html.slim
@@ -12,13 +12,10 @@
           span.bat-code= " " + I18n.t(".bat_in_locale")
         .converted#converted_amount
           = converted_balance
-        - if payout_in_progress?(@publisher)
+        - if payout_in_progress?(@publisher) && has_balance?(@publisher)
           .payout_in_progress
             span
-              - if converted_balance.present? && converted_balance.to_i>= PayoutReport::MINIMUM_BALANCE_AMOUNT
-                i = t(".payout_in_progress")
-              - else
-                i = t(".payout_minimum_balance", amount: PayoutReport::MINIMUM_BALANCE_AMOUNT, currency: t("bat_in_locale"))
+            = t(".payout_in_progress")
         - else
           .next_deposit_date.small.mt-2
             span = t(".next_deposit_date")
