--- a/app/views/site_channels/verification_dns_record.html.slim
+++ b/app/views/site_channels/verification_dns_record.html.slim
@@ -123,4 +123,4 @@ script type="text/html" id="verification_failed_modal_wrapper" data-open-verific
                       a target="_blank" href="https://support.office.com/en-us/article/Create-DNS-records-at-Aabaco-Small-Business-for-Office-365-53d1daba-6a4f-4814-8a68-8ad3d031463e#bkmk_verify" Yahoo/Aabaco
 
               div
-                a#contact-link.float-right href="mailto:support+publishers@basicattentiontoken.org"= t ".helper.contact"
+                a#contact-link.float-right href="https://community.brave.com"= t ".helper.contact"
