--- a/app/views/publishers/cases/update.js.erb
+++ b/app/views/publishers/cases/update.js.erb
@@ -4,7 +4,7 @@ if(<%= @case.errors.full_messages.length.positive? %>) {
 
   const errorMessage = document.createElement("div");
   errorMessage.classList = "mt-3 alert alert-warning";
-  errorMessage.innerHTML = "<%=@case.errors.full_messages.join(", ") %>";
+  errorMessage.innerText = "<%=@case.errors.full_messages.join(", ") %>";
   const form = document.querySelector("form");
   form.appendChild(errorMessage);
 }
