Fixed Typo - Resolves https://github.com/brave-intl/publishers/issues/2719
Signed-off-by: Adithya Krishna <aadithya794@gmail.com>

--- a/app/views/admin/publishers/_channel.html.slim
+++ b/app/views/admin/publishers/_channel.html.slim
@@ -31,7 +31,7 @@
               .d-flex.align-items-center.mb-2
                 =fa_icon "exclamation-circle", class: 'mr-2'
                 .font-weight-bold This channel does not have an associated Uphold card.
-              div In newer versions of Brave this channel will no longer appear has verified. In order to resolve this the creator must verify their identity with Uphold.
+              div In newer versions of Brave this channel will no longer appear as verified. In order to resolve this the creator must verify their identity with Uphold.
 
 
       / This is the details and statistics information
