--- a/app/views/application/_home_modal__add_promo_code.html.slim
+++ b/app/views/application/_home_modal__add_promo_code.html.slim
@@ -1,5 +1,7 @@
-= form_with(method: :post, url: create_new_untethered_referral_code_publishers_path(@publisher)) do |f|
-    .form-group
-        = f.label("Promo Name", class: "control-label", for: "promo-name")
-        = f.text_field("promo-name", class: "form-control", id: "promo-name", required: true)
-    = f.submit("Add Promo Code", class: "btn btn-wide btn-primary")
+.modal-buttons
+    = form_with(method: :post, \
+        url: create_new_untethered_referral_code_publishers_path(@publisher)) do |f|
+            = f.label("Promo Name", class: "control-label", for: "promo-name")
+            = f.text_field("promo-name", class: "form-control", id: "promo-name", required: true)
+            = f.submit("Add Promo Code", class: "js-deny btn btn-wide btn-primary")
+    = link_to t(".close"), "#", class: "js-deny btn btn-outline-primary"
