This PR adds webauthn support
Chromium is phasing out U2F support in Feb 2022
https://developer.chrome.com/blog/deps-rems-95/

We need to move to the newer, better Webauthn standard.

Since the majority of our 2factor auths are stored in U2F format, we
will use a compatibility layer to verify. See:

https://www.stackallocated.com/blog/2019/u2f-to-webauthn/
https://github.com/cedarcode/webauthn-ruby/blob/master/docs/u2f_migration.md
https://github.com/hansnielsen/webauthn-rails-demo/blob/v1-sign-with-webauthn/app/controllers/two_factor_controller.rb

Note that this PR covers just signing in using the Webauthn to U2F
compatibility layer (by passing app_id in extensions). We still need to
register with Webauthn. That will require DB migrations and is the subject
of a second PR.

--- a/app/views/two_factor_authentications/_u2f.html.slim
+++ b/app/views/two_factor_authentications/_u2f.html.slim
@@ -1,10 +1,9 @@
 div.js-feature-u2f-available
-
   = form_tag u2f_authentications_path, class: "js-authenticate-u2f" do
-    input type="hidden" name="u2f_app_id" value=(app_id)
-    input type="hidden" name="u2f_challenge" value=(challenge.as_json.to_json)
-    input type="hidden" name="u2f_sign_requests" value=(sign_requests.as_json.to_json)
-    input type="hidden" name="u2f_response"
+    input type="hidden" name="webauthn_u2f_app_id" value=(webauthn_get_options.extensions[:appid])
+    input type="hidden" name="webauthn_u2f_challenge" value=(webauthn_get_options.challenge)
+    input type="hidden" name="webauthn_u2f_sign_requests" value=(webauthn_get_options.allow.to_json)
+    input type="hidden" name="webauthn_u2f_response"
     h3.single-panel--headline = t ".heading"
 
     .col-small-centered
