--- a/app/views/two_factor_authentications/index.html.slim
+++ b/app/views/two_factor_authentications/index.html.slim
@@ -45,7 +45,7 @@
         .icon-and-text--text
           = t ".u2f-error.implementation-incomplete"
 
-  - if @u2f_authentication_attempt
+  - if @webauthn_u2f_backwards_compat_authentication_attempt
     div.js-feature-u2f-unavailable
       .single-panel--content.single-panel--content--warning.icon-and-text--wrapper
         .icon-and-text--icon
@@ -58,8 +58,8 @@
     .single-panel--padded-content
       - if @removal.present?
         = render partial: 'removal', locals: { removal: @removal }
-      - elsif @u2f_authentication_attempt
-        = render partial: "u2f", locals: @u2f_authentication_attempt
+      - elsif @webauthn_u2f_backwards_compat_authentication_attempt
+        = render partial: "u2f", locals: {webauthn_get_options: @webauthn_u2f_backwards_compat_authentication_attempt}
       - elsif @totp_enabled
         = render "totp"
     .single-panel--footer.mt-0
