task: Update copy

--- a/app/views/publisher_mailer/wallet_refresh_failure.html.slim
+++ b/app/views/publisher_mailer/wallet_refresh_failure.html.slim
@@ -4,7 +4,7 @@ p.salutation= t "publisher_mailer.shared.salutation", name: @publisher.name
 
 div.btn-container= link_to t(".button"), @publisher_log_in_url, class: "btn-primary btn-login"
 
-p== t "publisher_mailer.uphold_kyc_incomplete.unsubscribe"
+== t(".signature")
 
-.notice= t "shared.warning_note_html"
+
 
