--- a/app/views/publishers/_home_balances.html.slim
+++ b/app/views/publishers/_home_balances.html.slim
@@ -20,6 +20,9 @@
           .next_deposit_date.small.mt-2
             span = t(".next_deposit_date")
             span = next_deposit_date
+        - if @publisher.may_create_referrals?
+          .next_deposit_date.small.mt-2
+            span = t(".referral_payout_date")
   - if @publisher.no_grants?
     .d-none.d-xl-block
       .line
