More tests fixed

--- a/app/views/admin/errors/whitelist.html.slim
+++ b/app/views/admin/errors/whitelist.html.slim
@@ -13,7 +13,7 @@ html lang="en"
     content.page
       .container
         .box
-          =render("./admin/errors/construction.svg")
+          =render("admin/errors/constructionsvg")
         .box
           h1 Check your IP Address
         .box
