--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -4,6 +4,7 @@ html
     title Publisher Admin Dashboard
     = stylesheet_link_tag 'admin/main'
     = javascript_pack_tag 'admin'
+    = javascript_importmap_tags
     = csrf_meta_tags
   body data-action=params[:action] data-controller=params[:controller] data-locale=I18n.locale
     section id='container'
