--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,6 +11,8 @@ html
     - else
       = stylesheet_link_tag('application', media: 'all')
 
+    = javascript_importmap_tags
+
     - if content_for?(:head_js_tags)
       = yield(:head_js_tags)
     - else
