--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -21,65 +21,63 @@ noscript
 = append_javascript_pack_tag "WelcomeModal"
 
 .dashboard
-    #uphold_status
-      .row
-        .col.mb-4.payouts class="#{@publisher.no_grants? ? 'col-md-7' : '' }"
-          = render_async home_balances_publishers_path, container_class: 'balance-panel align-items-center' do
-            .spinner-border.center.text-primary role="status"
-        - if @publisher.may_create_referrals?
-          .col-md.mb-4
-            .dashboard-panel--wrapper
-              .dashboard-panel--header#publishers_statements
-                = t ".statements.heading"
-              .dashboard-panel--content
-                .statements-available
-                  = link_to(t(".statements.view_statements"), statements_path)
-
-    - if @payout_report.present?
-      .row
-       .col-md.mb-4
-         = render partial: 'payout_status', locals: { payout_report: @payout_report, publisher: @publisher }
+  #rewards-banner
+    = render partial: 'publishers/rewards_banner'
     .row
-      .col-md.mb-4
-        - if !(@publisher.excluded_from_payout? || @publisher.wire_only?)
-          = render partial: 'wallet_services'
-
-      - if promo_running?
-          = render partial: 'promo_panel'
-      - elsif @publisher.channels.empty?
+      - if @publisher.may_create_referrals?
         .col-md.mb-4
-          .add-channel-cta
-            = t ".add_channel_cta"
+          .dashboard-panel--wrapper
+            .dashboard-panel--header#publishers_statements
+              = t ".statements.heading"
+            .dashboard-panel--content
+              .statements-available
+                = link_to(t(".statements.view_statements"), statements_path)
+    
+  - if @payout_report.present?
+    .row
+     .col-md.mb-4
+       = render partial: 'payout_status', locals: { payout_report: @payout_report, publisher: @publisher }
+  .row
+    .col-md.mb-4
+      - if !(@publisher.excluded_from_payout? || @publisher.wire_only?)
+        = render partial: 'wallet_services'
 
-    / Don't show if none of the promo registrations has a valid stat
-    - if !@publisher.only_user_funds? \
-        && @publisher.promo_registrations.present? \
-        && @publisher.promo_registrations.has_stats.select { |promo_registration| promo_registration.stats_by_date.present? }.present? \
-        && @publisher.may_register_promo? \
-        && !@publisher.promo_lockout_time_passed?
-      = render "publishers/referral_charts", current_publisher: @publisher
+    - if promo_running?
+        = render partial: 'promo_panel'
+    - elsif @publisher.channels.empty?
+      .col-md.mb-4
+        .add-channel-cta
+          = t ".add_channel_cta"
 
-    - @channels.each do |channel|
-      = render partial: 'channel', locals: { channel: channel }
-    = will_paginate(@channels)
+  / Don't show if none of the promo registrations has a valid stat
+  - if !@publisher.only_user_funds? \
+      && @publisher.promo_registrations.present? \
+      && @publisher.promo_registrations.has_stats.select { |promo_registration| promo_registration.stats_by_date.present? }.present? \
+      && @publisher.may_register_promo? \
+      && !@publisher.promo_lockout_time_passed?
+    = render "publishers/referral_charts", current_publisher: @publisher
 
-    .row id="add_channel_placeholder"
-      .col.mb-4
-        = link_to(\
-          "+ #{t "shared.add_channel"}", \
-          choose_new_channel_type_publishers_path, \
-          data: {"js-confirm-with-modal": "choose-channel-type"}, \
-          class: 'channel-placeholder' \
-        )
+  - @channels.each do |channel|
+    = render partial: 'channel', locals: { channel: channel }
+  = will_paginate(@channels)
 
-    .row.tos-row
-      .col.mb-4
-        - if @publisher.may_create_referrals?
-          .promo--tos
-            = t("promo.shared.tos_2_html")
-        - else
-          .terms-of-service
-            = link_to(t("shared.terms_of_service"), terms_of_service_url)
+  .row id="add_channel_placeholder"
+    .col.mb-4
+      = link_to(\
+        "+ #{t "shared.add_channel"}", \
+        choose_new_channel_type_publishers_path, \
+        data: {"js-confirm-with-modal": "choose-channel-type"}, \
+        class: 'channel-placeholder' \
+      )
+
+  .row.tos-row
+    .col.mb-4
+      - if @publisher.may_create_referrals?
+        .promo--tos
+          = t("promo.shared.tos_2_html")
+      - else
+        .terms-of-service
+          = link_to(t("shared.terms_of_service"), terms_of_service_url)
 
 - if @publisher.promo_status(promo_running?) == :active
   javascript:
