--- a/app/views/admin/channels/_default.html.slim
+++ b/app/views/admin/channels/_default.html.slim
@@ -12,4 +12,4 @@ table.display.table.table-bordered.table-striped.dynamic-table id="dynamic-table
         td = publisher_link(channel.publisher)
         td = channel.details.channel_identifier
         td = channel.verified
-        td = channel.created_at.to_s(:long)
+        td = channel.created_at.to_fs(:long)
