--- a/app/views/admin/channels/_youtube.html.slim
+++ b/app/views/admin/channels/_youtube.html.slim
@@ -18,4 +18,4 @@ table.display.table.table-bordered.table-striped.dynamic-table id="dynamic-table
         td = channel.details.stats["video_count"]
         td = channel.details.stats["subscriber_count"]
         td = channel.details.channel_identifier.split(':').second
-        td = channel.created_at.to_s(:long)
+        td = channel.created_at.to_fs(:long)
