--- a/app/views/admin/channels/_twitch.html.slim
+++ b/app/views/admin/channels/_twitch.html.slim
@@ -14,4 +14,4 @@ table.display.table.table-bordered.table-striped.dynamic-table id="dynamic-table
         td = publisher_link(channel.publisher)
         td = channel.details.stats["view_count"]
         td = channel.details.stats["followers_count"]
-        td = channel.created_at.to_s(:long)
+        td = channel.created_at.to_fs(:long)
