Initial conversion to shakapaker

--- a/app/views/admin/cases/index.html.slim
+++ b/app/views/admin/cases/index.html.slim
@@ -18,5 +18,5 @@
     = will_paginate @cases
 
 
-= javascript_pack_tag "tribute"
-= javascript_pack_tag "admin_case"
+= append_javascript_pack_tag "tribute"
+= append_javascript_pack_tag "admin_case"
