--- a/app/views/admin/cases/show.html.slim
+++ b/app/views/admin/cases/show.html.slim
@@ -1,7 +1,7 @@
 
-= javascript_pack_tag 'tribute'
-= javascript_pack_tag 'admin_case'
-= javascript_pack_tag 'admin_case_replies'
+= append_javascript_pack_tag 'tribute'
+= append_javascript_pack_tag 'admin_case'
+= append_javascript_pack_tag 'admin_case_replies'
 
 .row.p-3.mb-4.shadow-sm.mx-1.rounded
   .col-4
