--- a/app/views/admin/payments/index.html.slim
+++ b/app/views/admin/payments/index.html.slim
@@ -1,2 +1,2 @@
 #payments_data data=@data.to_json
-= javascript_pack_tag 'views/admin/payments/Payments'
+= append_javascript_pack_tag 'views/admin/payments/Payments'
