--- a/app/views/admin/payout_reports/show.html.slim
+++ b/app/views/admin/payout_reports/show.html.slim
@@ -137,4 +137,4 @@ h6 Payout Details
         td.small= link_to(publisher_id, admin_publisher_path(publisher_id))
 
 
-=javascript_pack_tag 'PayoutReports'
+=append_javascript_pack_tag 'PayoutReports'
