--- a/app/views/admin/publishers/index.html.slim
+++ b/app/views/admin/publishers/index.html.slim
@@ -1,5 +1,5 @@
 #duplicates
-= javascript_pack_tag 'views/admin/publishers/Duplicates'
+= append_javascript_pack_tag 'views/admin/publishers/Duplicates'
 div.row
   div.col-sm-12
     section.panel
