--- a/app/views/admin/unattached_promo_registrations/index.html.slim
+++ b/app/views/admin/unattached_promo_registrations/index.html.slim
@@ -1,4 +1,4 @@
-= javascript_pack_tag 'views/admin/referrals/UnattachedSearch'
+= append_javascript_pack_tag 'views/admin/referrals/UnattachedSearch'
 
 .unattached-promo-registrations
   .flex
