--- a/app/views/browser_users/_promo_panel.html.slim
+++ b/app/views/browser_users/_promo_panel.html.slim
@@ -1,4 +1,4 @@
 .col class='mb-4'
   .promo-panel.h-100
     .promo-flex-col.h-100#react-promo-panel data-props={publisherId: current_publisher.id}.to_json
-    = javascript_pack_tag('referrals/ReferralPanel')
+    = append_javascript_pack_tag('referrals/ReferralPanel')
