--- a/app/views/publishers/_wallet_services.html.slim
+++ b/app/views/publishers/_wallet_services.html.slim
@@ -5,4 +5,4 @@
         .cssload-loading
           i
           i
-  = javascript_pack_tag('WalletServices')
+  = append_javascript_pack_tag('WalletServices')
