--- a/app/views/publishers/cases/new.html.slim
+++ b/app/views/publishers/cases/new.html.slim
@@ -51,4 +51,4 @@
           h5.fade#saved
             .badge.badge-success =t('publishers.cases.shared.saved')
 
-=javascript_pack_tag 'case'
+=append_javascript_pack_tag 'case'
