--- a/app/views/publishers/settings/index.html.slim
+++ b/app/views/publishers/settings/index.html.slim
@@ -68,4 +68,4 @@
               = link_to t(".delete_account.prompt.confirm"), "#", class: "js-confirm btn btn-wide btn-danger"
 
 
-= javascript_pack_tag 'SettingsPage'
+= append_javascript_pack_tag 'SettingsPage'
