--- a/app/views/admin/publishers/referrals/index.html.slim
+++ b/app/views/admin/publishers/referrals/index.html.slim
@@ -36,11 +36,11 @@
     .col
       .promo-panel.h-100
         .promo-flex-col.h-100#react-promo-panel data-props={publisherId: @publisher.id}.to_json
-        = javascript_pack_tag('referrals/ReferralPanel')
+        = append_javascript_pack_tag('referrals/ReferralPanel')
 
 .row
   .col.bot-marg
     .dashboard-panel--wrapper
       #channel-referrals-stats-chart
         canvas id="channel-referrals-stats-chart-canvas"
-= javascript_pack_tag 'views/admin/referrals/Referrals'
+= append_javascript_pack_tag 'views/admin/referrals/Referrals'
