--- a/app/views/layouts/statement.html.slim
+++ b/app/views/layouts/statement.html.slim
@@ -14,5 +14,5 @@ html
   body
     .container.bg-white.shadow-sm.p-4.rounded
       #statement_details data-statement=@overview.to_json
-    =javascript_pack_tag('StatementDetails')
+    =append_javascript_pack_tag('StatementDetails')
 
