--- a/app/views/publishers/_promo_panel.html.slim
+++ b/app/views/publishers/_promo_panel.html.slim
@@ -27,7 +27,7 @@
       .promo-panel.h-100
         .h-100
           .promo-flex-col#react-promo-panel data-props={publisherId: @current_publisher.id}.to_json
-          = javascript_pack_tag('referrals/ReferralPanel')
+          = append_javascript_pack_tag('referrals/ReferralPanel')
           - if @publisher.promo_lockout_time.present?
             .promo-panel-item.promo-panel-item-alert
               #promo-panel-alert
