--- a/app/views/publishers/statements/index.html.slim
+++ b/app/views/publishers/statements/index.html.slim
@@ -18,4 +18,4 @@ noscript
         = link_to(I18n.t('publishers.statements.index.reauthorize'), connection_uphold_connection_path, method: :patch)
 
   .statements
-=javascript_pack_tag('Statements')
+=append_javascript_pack_tag('Statements')
