--- a/app/views/publishers/statements/show.html.slim
+++ b/app/views/publishers/statements/show.html.slim
@@ -1,4 +1,4 @@
 .container.bg-white.shadow-sm.p-4.rounded
   #statement_details data-statement=@overview.to_json
-=javascript_pack_tag('StatementDetails')
+=append_javascript_pack_tag('StatementDetails')
 
